--- a/Romo.html
+++ b/Romo.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <td border="0" align="center">
+                <img src="imagenes/LogUtc.png"  width="900px" height="200px" class="portada_In">
+            </td>
     <header>
 
         <div class="menu container">
