--- a/Romo.html
+++ b/Romo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <td border="0" align="center">
-                <img src="imagenes/LogUtc.png"  width="900px" height="200px" class="portada_In">
+                <img src="imagenes doc/principal.png"  width="900px" height="200px" class="portada_In">
             </td>
     <header>
 
