--- a/Romo.html
+++ b/Romo.html
@@ -17,7 +17,7 @@
             <a href="#" class="logo">Logo</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="images/menu-btn.pgn" class="menu-icono"alt"">
+                <img src="images doc/menu-btn.pgn" class="menu-icono"alt"">
             </label>
 
             <nav class="navbar">
