--- a/Romo.html
+++ b/Romo.html
@@ -34,8 +34,8 @@
         <div class="header-content container">
 
             <div class="content">
-                <h1> GRUPO MUSICAL ARI MUNANI </h1>
-                viuboik
+                <h1> GRUPO MUSICAL ARI </h1>
+                
 
             </div>
 
