--- a/musica.html
+++ b/musica.html
@@ -12,7 +12,7 @@
     <header class="cabecera">
         <div class="contenedor">
             <a href="galeria.html" title="Galeria">
-                <img class="logo" src="img/img4.jpg"/>
+                <img class="logo" src="imag/principal.jpg"/>
             </a>
             <nav class="menu borde-menu">      
                 <a href="index.html">INICIO</a>
@@ -23,7 +23,7 @@
     <main>
         <section>
             <div>
-                <img class="imagen" src="img/img2.jpg">
+                <img class="imagen" src="imag/principal.jpg">
             </div>
         </section>
         <section class="texto">
@@ -36,14 +36,14 @@
             </div>
             <div class="fila">
                 <div class="columna columna-100 derecha-texto">
-                    <p>DINOS QUE NECESITAS</p>
+                    <p>DINOS EN QUE TE PODEMOS AYUDAR</p>
                 </div>
             </div>
         </div>
         </section>   
             <div class="fila-img">
                 <div class="columna-img columna-50">
-                    <img class="imagen-galeria" src="img/img1.jpg"/>
+                    <img class="imagen-galeria" src="imag/img2.jpg"/>
                     <div class="fila">
                         <div class="columna columna-100 justificar-texto"> <!--texto centrado y justificado-->
                             <p>Contamos con servicio de serenatas</p>
@@ -52,7 +52,7 @@
               
                 </div>
                 <div class="columna-img columna-25">
-                    <img class="imagen-galeria" src="img/imgprincipal.png"/>
+                    <img class="imagen-galeria" src="imag/img3.png"/>
                     <div class="fila">
                         <div class="columna columna-100 centrar-texto">
                             <p>Eventos musicales dentro y fuera de la provincia y el pais</p>
@@ -61,7 +61,7 @@
                     
                 </div>
                 <div class="columna-img columna-25">
-                    <img class="imagen-galeria" src="img/imgwin.jpg"/>
+                    <img class="imagen-galeria" src="imag/img4.jpg"/>
                     <div class="fila">
                         <div class="columna columna-100 centrar-texto">
                             <p>tambien realizamos recorridos en todas las fiestas de tu pueblo</p>
