--- a/Romo.html
+++ b/Romo.html
@@ -12,31 +12,28 @@
     <header class="cabecera">
         <div class="contenedor">
             <a href="index.html" title="Pagina de inicio">
-                <img class="logo" src="img/img4.jpg"/>
+                <img class="logo" src="imag/img4.jpg"/>
             </a>
             <nav class="menu borde-menu">      
                 <a href="index.html">INICIO</a>
-                <a href="contacto.html">CONTACTO</a>
-                <a href="servicios.html">SERVICIOS</a>
-                <a href="ubicacion.html">UBICACION</a>
                 <a href="galeria.html">GALERIA</a>
             </nav>
             <a href="#" class="icono">
-                <i class="fa-solid fa-computer"color= red>
+                <i class=logo scr="imag/icon1.png" color= red>
                 </i>
             </a>
         </div>
     </header>
     <main>
         <section id="texto1">
-                <img class="imagen" src="img/img2.jpg">
+                <img class="imagen" src="imag/img2.jpg">
             <div class="contenedor"> 
                 <div class="fila">
                     <div class="columna columna-50">
                         <h1>ARIMUNANI</h1>
                 </div>
                     <div class="columna columna-33 estilo1">
-                        <a href="https://www.youtube.com/watch?v=6cqLTgi3yLQ">YOUTUBE</a>
+                        <a href="https://youtu.be/O9p3vvXUrvo">YOUTUBE</a>
                     </div>
                         <div class="columna columna-50 ">
                         <p>LA MEJOR MUSICA FOLKLORICA PARA TI</p>
@@ -54,9 +51,6 @@
                 <div class="fila">
                     <div class="columna columna-33 justificar-texto" >
                         <div class="centrar-texto">
-                            <a class="icono">
-                                <i class="fa-solid fa-desktop"></i>
-                            </a>
                         </div>   
                         <p>Somos un grupo de jovenes compartiendo la musica
                         de nuestros antepasados para que no se pierdan las costumbres 
