--- a/Romo.html
+++ b/Romo.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INICIO</title>
-    <link href="css/estilos.css" rel="stylesheet" type="text/css">
+    <link href="estilos.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/0a7397fd85.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="cabecera">
         <div class="contenedor">
-            <a href="index.html" title="Pagina de inicio">
+            <a href="Romo.html" title="Pagina de inicio">
                 <img class="logo" src="imag/img4.jpg"/>
             </a>
             <nav class="menu borde-menu">      
-                <a href="index.html">INICIO</a>
+                <a href="Romo.html">INICIO</a>
                 <a href="galeria.html">GALERIA</a>
             </nav>
             <a href="#" class="icono">
@@ -83,3 +83,4 @@
     </main>
 </body>
 </html>
+
