--- a/musica.html
+++ b/musica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GALERIA</title>
-    <link href="css/estilos.css" rel="stylesheet" type="text/css">
+    <link href="estilos.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/0a7397fd85.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,8 +15,8 @@
                 <img class="logo" src="imag/principal.jpg"/>
             </a>
             <nav class="menu borde-menu">      
-                <a href="index.html">INICIO</a>
-                <a href="galeria.html">GALERIA</a>
+                <a href="Romo.html">INICIO</a>
+                <a href="musica.html">GALERIA</a>
             </nav>
         </div>
     </header>
@@ -67,6 +67,12 @@
                             <p>tambien realizamos recorridos en todas las fiestas de tu pueblo</p>
                         </div>
                     </div>
+
+            </div>
+        </section>
+    </main>
+</body>
+</html>
 
             </div>
         </section>
