--- a/musica.html
+++ b/musica.html
@@ -52,7 +52,7 @@
               
                 </div>
                 <div class="columna-img columna-25">
-                    <img class="imagen-galeria" src="imag/img3.png"/>
+                    <img class="imagen-galeria" src="imag/img3.jpg"/>
                     <div class="fila">
                         <div class="columna columna-100 centrar-texto">
                             <p>Eventos musicales dentro y fuera de la provincia y el pais</p>
