--- a/Romo.html
+++ b/Romo.html
@@ -16,7 +16,7 @@
             </a>
             <nav class="menu borde-menu">      
                 <a href="Romo.html">INICIO</a>
-                <a href="galeria.html">GALERIA</a>
+                <a href="musica.html">GALERIA</a>
             </nav>
             <a href="#" class="icono">
                 <i class=logo scr="imag/icon1.png" color= red>
